--- a/creating file/creating file/Base.lproj/Main.storyboard
+++ b/creating file/creating file/Base.lproj/Main.storyboard
@@ -16,35 +16,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ynY-iG-JL6">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ynY-iG-JL6">
                                 <rect key="frame" x="20" y="88" width="294" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="ttH-s8-SV5">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="ttH-s8-SV5">
                                 <rect key="frame" x="0.0" y="448" width="414" height="437"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="437" id="Pj8-Gb-BHl"/>
+                                </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="myCell" id="jwq-mQ-WE9" customClass="tableViewCell" customModule="creating_file" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43"/>
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jwq-mQ-WE9" id="ccy-Os-IMh">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Tz-HM-bw6">
-                                                    <rect key="frame" x="175" y="11" width="42" height="21"/>
+                                                    <rect key="frame" x="186" y="11.5" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="1Tz-HM-bw6" firstAttribute="top" secondItem="ccy-Os-IMh" secondAttribute="topMargin" id="A5Z-Ls-hwh"/>
-                                                <constraint firstItem="1Tz-HM-bw6" firstAttribute="leading" secondItem="ccy-Os-IMh" secondAttribute="leading" constant="175" id="Pv7-t3-noY"/>
-                                                <constraint firstItem="1Tz-HM-bw6" firstAttribute="centerY" secondItem="ccy-Os-IMh" secondAttribute="centerY" id="nIV-ZK-JXe"/>
+                                                <constraint firstItem="1Tz-HM-bw6" firstAttribute="centerY" secondItem="ccy-Os-IMh" secondAttribute="centerY" id="dGy-7J-gwZ"/>
+                                                <constraint firstItem="1Tz-HM-bw6" firstAttribute="centerX" secondItem="ccy-Os-IMh" secondAttribute="centerX" id="fly-aQ-HYQ"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -52,34 +52,34 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="ZHm-3v-4kv"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="kwX-Cs-KZg"/>
+                                </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xbK-3Q-sHt">
-                                <rect key="frame" x="20" y="226" width="117" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xbK-3Q-sHt">
+                                <rect key="frame" x="20" y="226" width="88.5" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="create file"/>
                                 <connections>
                                     <action selector="CreateFileAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rbc-FJ-MdE"/>
                                 </connections>
                             </button>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lEX-xD-Zp4">
-                                <rect key="frame" x="196" y="226" width="49" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lEX-xD-Zp4">
+                                <rect key="frame" x="167.5" y="226" width="51" height="31"/>
                                 <connections>
                                     <action selector="switchSelect:" destination="BYZ-38-t0r" eventType="valueChanged" id="4qr-KA-sMj"/>
                                 </connections>
                             </switch>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="write here ..........................." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="WjW-dl-fgy">
-                                <rect key="frame" x="48" y="293" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="write here ..........................." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="WjW-dl-fgy">
+                                <rect key="frame" x="48" y="293" width="326" height="128"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OAx-NR-8nd">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OAx-NR-8nd">
                                 <rect key="frame" x="20" y="146" width="117" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="crete folder"/>
                                 <connections>
@@ -89,6 +89,24 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="xbK-3Q-sHt" firstAttribute="top" secondItem="OAx-NR-8nd" secondAttribute="bottom" constant="49" id="0rp-rg-Qfq"/>
+                            <constraint firstItem="ynY-iG-JL6" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="48x-cY-kZh"/>
+                            <constraint firstItem="lEX-xD-Zp4" firstAttribute="centerY" secondItem="xbK-3Q-sHt" secondAttribute="centerY" id="Bbe-Ri-Hbk"/>
+                            <constraint firstItem="OAx-NR-8nd" firstAttribute="top" secondItem="ynY-iG-JL6" secondAttribute="bottom" constant="24" id="CH2-Bd-neD"/>
+                            <constraint firstItem="WjW-dl-fgy" firstAttribute="top" secondItem="xbK-3Q-sHt" secondAttribute="bottom" constant="36" id="DFd-N9-8Mk"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ynY-iG-JL6" secondAttribute="trailing" constant="100" id="GYe-u2-g8X"/>
+                            <constraint firstItem="ttH-s8-SV5" firstAttribute="top" secondItem="WjW-dl-fgy" secondAttribute="bottom" constant="27" id="Gio-8X-V7y"/>
+                            <constraint firstItem="lEX-xD-Zp4" firstAttribute="leading" secondItem="xbK-3Q-sHt" secondAttribute="trailing" constant="59" id="RfL-ls-qUM"/>
+                            <constraint firstAttribute="bottom" secondItem="ttH-s8-SV5" secondAttribute="bottom" constant="11" id="SBF-Em-0Bv"/>
+                            <constraint firstItem="ttH-s8-SV5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="TQE-p1-fsZ"/>
+                            <constraint firstItem="WjW-dl-fgy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="48" id="Thc-Xf-mjF"/>
+                            <constraint firstItem="ttH-s8-SV5" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="X2u-Gs-Eic"/>
+                            <constraint firstItem="ynY-iG-JL6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ZD2-9b-DcL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WjW-dl-fgy" secondAttribute="trailing" constant="40" id="icD-Z3-0pa"/>
+                            <constraint firstItem="xbK-3Q-sHt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="jCp-uE-JO8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lEX-xD-Zp4" secondAttribute="trailing" constant="197.5" id="szV-9V-IfG"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="7Ml-8E-su7"/>
                     <connections>
